[package]
name = "ghostguessr-patcher"
version = "1.0.0"
edition = "2021"

[package.metadata]

[package.metadata.tauri]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.11"
rfd = "0.14"
open = "5"
glob = "0.3"
path-absolutize = "3.1"
pathdiff = "0.1"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.7"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
